test/parsing/errors/externUnclosedPair.compopts
--detailed-errors # externUnclosedPair-detailed.good
--no-detailed-errors # externUnclosedPair-brief.good
